--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,3 +31,7 @@ body {
   -webkit-font-smoothing: antialiased;
   text-shadow: rgba(0, 0, 0, .01) 0 0 1px;
 }
+
+.user-mention {
+  @apply text-pink-400 font-medium;
+}
