feat: highlight cards

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -54,3 +54,19 @@ body {
 .merged-author > span {
   @apply text-pink-400;
 }
+
+.super-highlighted {
+  padding: 20px;
+  padding-bottom: 30px;
+  margin: 10px -10px;
+  box-shadow: 0 0 15px #666;
+  z-index: 999;
+  position: relative;
+}
+
+.super-highlighted > .note-form {
+  font-size: 1.5em;
+}
+
+.super-highlighted > .icons-container {
+}
