--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -1,6 +1,17 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@layer tailwind-base, primereact, tailwind-utilities;
+
+/* IMPORTANT: In "styled" mode you must add the PrimeReact Theme here. Do NOT include in "unstyled" mode */
+@import 'primereact/resources/themes/lara-light-blue/theme.css';
+@import 'primeicons/primeicons.css';
+
+@layer tailwind-base {
+  @tailwind base;
+}
+
+@layer tailwind-utilities {
+  @tailwind components;
+  @tailwind utilities;
+}
 
 :root {
   --foreground-rgb: 0, 0, 0;
@@ -42,4 +53,20 @@ body {
 
 .merge-container {
   @apply transition-all w-full mb-4 rounded-lg;
+}
+
+// Primereact override
+.p-confirm-popup-footer {
+  @apply flex justify-end gap-2;
+
+  .p-button {
+    @apply rounded-md px-4 py-1 focus:ring-4 focus:ring-blue-300;
+  }
+  .p-confirm-popup-accept {
+    @apply text-slate-100 bg-indigo-600 hover:bg-indigo-400 disabled:bg-indigo-300;
+  }
+
+  .p-confirm-popup-reject {
+    @apply hover:bg-slate-300 disabled:bg-slate-200;
+  }
 }
