--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -51,6 +51,10 @@ body {
   @apply outline outline-4 outline-pink-400;
 }
 
+.selected {
+  @apply outline outline-2 outline-slate-600;
+}
+
 .merge-container {
   @apply transition-all w-full mb-4 rounded-lg;
 }
