refactor: now generate action item by individual bad note

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -63,7 +63,7 @@ body {
 }
 
 .generating-action-items-intermittent {
-  animation: blink-icon 1s ease-in-out infinite;
+  animation: blink-border 1s ease-in-out infinite;
 }
 
 @keyframes blink-border {
